--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,6 @@
   "name": "figma-to-roblox-ui",
   "id": "1011675510470038155",
   "api": "1.0.0",
-  "main": "code.js",
-  "ui": "ui.html"
+  "main": "dist/code.js",
+  "ui": "dist/ui.html"
 }
