--- a/package.json
+++ b/package.json
@@ -1,11 +1,26 @@
 {
   "name": "figma-to-roblox-ui",
   "version": "1.0.0",
-  "description": "Your Figma plugin",
+  "description": "Converts a Figma project to Roblox UI",
   "main": "code.js",
   "scripts": {
     "build": "tsc -p tsconfig.json"
   },
   "author": "",
-  "license": ""
+  "license": "",
+  "devDependencies": {
+    "@figma/plugin-typings": "^1.30.0",
+    "css-loader": "^6.2.0",
+    "html-webpack-inline-source-plugin": "^1.0.0-beta.2",
+    "html-webpack-plugin": "^5.3.2",
+    "style-loader": "^3.2.1",
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.3.5",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0"
+  },
+  "dependencies": {
+    "jszip": "^3.7.1"
+  }
 }
