--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "lib": ["es6", "dom"],
+	"moduleResolution": "node",
     "typeRoots": [
       "./node_modules/@types",
       "./node_modules/@figma"
